# CV_matcher

./: .gitignore  README.md  requirements.txt
.github/workflows/: onPR.yaml
python/: db.Dockerfile  docker-compose.yaml  setup.cfg
python/.github/workflows/: onPR.yaml
python/docs/: CVMatcher.drawio
python/example/: test copy.ipynb  test.ipynb  testExtractConfig.ipynb
python/src/CV_matcher/: __main__.py
python/src/CV_matcher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/src/CV_matcher/connection/: PostgresConnection.py
python/src/CV_matcher/connector/: GoogleConnector.py  GoogleDriveConnector.py
python/src/CV_matcher/controller/: constants.py  runserver.py
python/src/CV_matcher/controller/jobScraper/: JobScraperController.py
python/src/CV_matcher/controller/jobScraper/config/: Config.py
python/src/CV_matcher/controller/uploadFile/: UploadFileController.py
python/src/CV_matcher/db/: Connection.py
python/src/CV_matcher/model/dao/: DAO.py  ExtractConfigDAO.py  JobDAO.py  JobsDAO.py  Utils.py
python/src/CV_matcher/model/entities/: ExtractConfig.py  Job.py  Jobs.py
python/src/CV_matcher/service/configService/: __init__.py
python/src/CV_matcher/service/jobScraper/: JobScraper.py  scraper-1.py  scraper-2.py  test.ipynb
python/src/CV_matcher/service/uploadFile/: UploadFileHandler.py
python/src/CV_matcher/utils/: __init__.py
python/src/resources/db/: ExtractConfig.sql  Jobs.sql
python/src/resources/uploads/: Append-source.csv
python/tests/: GoogleDriveConnectorTest.py  JobScraperTest.py  PostgresConnectorTest.py
(+3 files in other folders)
