[metadata]
name = CV_matcher
version = 0.1.0
author = hoa-nguyen
author_email = thaihoang071710@gmail.com
description = CV matching library
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    psycopg2-binary==2.9.9

[options.packages.find]
where = src